[project]
name = "ggoutlier"
version = "0.4.0"
description = "Tool for detecting isolated or anomalous depth measurements in bathymetry data"
authors = [
    { name = "pktrigg", email = "pktrigg@gmail.com" },
]
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "reportlab",
    "pyproj",
    "pyshp",
    "scipy",
    "rasterio",
    "numpy",
    "matplotlib",
    "pillow",
]

[project.urls]
Homepage = "https://github.com/pktrigg/ggoutlier"
Repository = "https://github.com/pktrigg/ggoutlier"

[project.scripts]
ggoutlier = "ggoutlier:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ggoutlier"]
include = [
    "ggoutlier/GGOutlierGIS.png",
    "ggoutlier/guardian.png",
]